--- a/front/src/app/pages/principal/principal.component.html
+++ b/front/src/app/pages/principal/principal.component.html
@@ -4,6 +4,36 @@
 
 <div class="container">
 
+    <br><br><br>
+
+    <div class="row">
+   
+        <div class="col-sm">
+        </div>
+
+        <div class="col-sm text-center">
+           
+            <mat-form-field appearance="fill" >
+
+
+                <mat-label>Selecionar genero</mat-label>
+
+                <mat-select disableRipple>
+
+                    <mat-option value="i" *ngFor="let genero of generos ; let i = index">{{ genero.Titulo }}
+                    </mat-option>
+
+                </mat-select>
+
+
+            </mat-form-field>
+        </div>
+
+        <div class="col-sm">
+        </div>
+
+    </div>
+
     <div class="row">
 
         <div class="col-sm">
@@ -15,7 +45,7 @@
         <div class="col-sm">
             <app-album></app-album>
         </div>
-     
+
     </div>
 
 </div>
