--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -2,7 +2,7 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
 body {
-  background-image: radial-gradient(circle at 12.5% 12.5%, #ff65f4 0, #e85ee9 25%, #be55d8 50%, #964cc5 75%, #7143b3 100%);
+  background-image: radial-gradient(circle at 12.5% 12.5%, #3f51b5 0, #3f51b5 25%, #3f51b5 50%, #3f51b5 75%, #3f51b5 100%);
   }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
