--- a/front/src/app/pages/principal/principal.component.html
+++ b/front/src/app/pages/principal/principal.component.html
@@ -4,7 +4,7 @@
 
 <div class="container">
 
-    <br><br><br>
+    <br>
 
     <div class="row">
 
@@ -15,7 +15,8 @@
 
             <mat-form-field appearance="fill">
                 <mat-label>Selecionar genero</mat-label>
-                <mat-select disableRipple (selectionChange)="GeneroSelecionado($event)" >
+                <mat-select disableRipple (click)="generoEnter()" 
+                    (selectionChange)="generoSelecionado($event)">
                     <mat-option *ngFor="let genero of generos" [value]="genero.titulo">
                         {{genero.titulo}}
                     </mat-option>
@@ -30,21 +31,28 @@
     </div>
 
     <div class="row">
-
-        <div class="col-sm">
-            <app-album></app-album>
+        <div class="col-sm" *ngFor="let album of albuns">
+            <mat-card class="example-card">
+                <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title>{{album.titulo}}</mat-card-title>
+                    <mat-card-subtitle>{{album.descricao}}</mat-card-subtitle>
+                </mat-card-header>
+                <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+                    alt="Photo of a Shiba Inu">
+                <mat-card-content>
+                    <p>
+                        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+                        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+                        bred for hunting.
+                    </p>
+                </mat-card-content>
+                <mat-card-actions>
+                    <button mat-button>LIKE</button>
+                    <button mat-button>SHARE</button>
+                </mat-card-actions>
+            </mat-card>
         </div>
-        <div class="col-sm">
-            <app-album></app-album>
-        </div>
-        <div class="col-sm">
-            <app-album></app-album>
-        </div>
-
     </div>
 
 </div>
-
-<footer>
-    <app-cabecalho></app-cabecalho>
-</footer>
