--- a/front/src/app/pages/autenticar/autenticar.component.css
+++ b/front/src/app/pages/autenticar/autenticar.component.css
@@ -3,7 +3,7 @@
     width: 400px;
     height: 400px;
     box-shadow: 3px 4px 14px 0px rgba(0,0, 0, 0.39);
-    background-color: rgba(253, 160, 245, 0.521);
+    background-color: rgb(255, 253, 255);
     position: absolute;
     left: 0;
     right: 0;
