--- a/front/src/app/pages/principal/principal.component.css
+++ b/front/src/app/pages/principal/principal.component.css
@@ -20,18 +20,23 @@
 .example-card {
   display: block;
   background: #FFFFFF;
-  width: 300px;
-  height: 570px;
+  width: 315px;
+  height: 500px;
   border-radius: 15px;
   margin: 10px;
   display: inline-block;
-  align: center;
   transition: all .25s linear;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.4);
 }
 
+.carousel-indicators[_ngcontent-hug-c12] {
+  width: 50px;
+  height: 300px;
+  border-radius: 50%;
+}
+
 .mat-card:hover{
-  box-shadow: -1px 10px 29px 0px rgba(0,0,0,0.8);
+  box-shadow: -1px 10px 29px 0px rgb(250, 248, 248);
 }
 
 .mat-card-content{
